kubernetes/blog.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blog
  labels:
    app: blog
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      name: blog
      labels:
        app: blog
    spec:
      restartPolicy: Always
      containers:
        - name: blog
          image: gcr.io/blog-121419/blog:v0.5.0
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
spec:
  selector:
    app: blog
  ports:
    - port: 9000
