kubernetes/teamcity.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: teamcity-server
  labels:
    app: teamcity-server
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-server
  template: 
    metadata: 
      name: teamcity-server
      labels: 
        app: teamcity-server
    spec:
      restartPolicy: Always
      containers:
        - name: teamcity-server
          image: jetbrains/teamcity-server
          ports:
            - containerPort: 8011
---
apiVersion: v1
kind: Service 
metadata: 
  name: teamcity-server-service
spec:
  selector: 
    app: teamcity-server
  ports: 
    - port: 8011
